# Fuzzmark

./: .gitignore  CLAUDE.md  README.md  fuzzmark-spec.md
engine/: pyproject.toml
engine/fixtures/: components.html  components_reveal.html  ctas.html  form.html  test_form_submit.json  wizard.html
engine/fixtures/breakage/: added-element.html  color-change.html  moved-element.html  removed-element.html  text-change.html
engine/fixtures/site/: about.html  contact.html  index.html
engine/fixtures/site/deep/: level2.html  level3.html  level4.html
engine/src/fuzzmark/: __init__.py  check.py  cli.py
engine/src/fuzzmark/baselines/: __init__.py  approve.py  models.py  store.py
engine/src/fuzzmark/capture/: __init__.py  (+2 more)
engine/tests/: conftest.py  test_baselines.py  test_capture.py  test_capture_compare_e2e.py  test_check.py  test_compare.py  test_compare_align.py  test_compare_masks.py  test_compare_structure.py  test_compare_structure_browser.py  test_driver.py  test_driver_browser.py  test_extractor_components_browser.py  test_extractor_ctas_browser.py  test_extractor_reveal_browser.py  test_extractor_site.py  test_jobs.py  test_mobile_capture_sim.py  test_mobile_check.py  test_mobile_check_sim.py  test_mobile_dod_sim.py  test_mobile_driver_sim.py  test_mobile_flow.py  test_mobile_pipeline.py  test_mobile_simctl.py  test_mvp_dod.py  test_project.py  test_report.py  test_runner_events.py  test_scanner.py  test_scanner_browser.py  test_server.py  test_sessions.py  test_sessions_browser.py  test_suggestions.py  test_suggestions_custom.py  test_suggestions_site.py
(+85 files in other folders)
